--- a/style.css
+++ b/style.css
@@ -427,6 +427,10 @@ h1 {
 }
 h2 {
   padding-bottom: 5px;
+  border-bottom: 2px solid #111;
+}
+h3 {
+  padding-bottom: 5px;
   border-bottom: 1px solid #555;
 
 }
